--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="result" id="resultOutput"></div>
         </main>
         <footer>
-            <p>&copy; 2024 Factorial Calculator. All rights reserved.</p>
+            <p>&copy; 2024 Factorial Calculator. All rights reserved.
+            <head>Made by Shaurya joshi </head>
+            </p>
         </footer>
     </div>
     <script src="script.js"></script>
